# lifespan

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  sample.env
db/: asset.js  db.js  schema.sql  spider.js
lib/: bench.js  channel.js  job.js  recorder.js  spider.js  util.js
scripts/: scrape.js  test.js
src/: app.html
src/db/: asset.js  attempt.js  schema.sql  scrape-spider.js  scrape.js  spider.js
src/lib/components/: Header.svelte  KeyValue.svelte  Scrape.svelte
src/lib/db/: db.js
src/routes/: +page.server.js  +page.svelte
src/routes/images/: +server.js
src/routes/scrapes/: +page.server.js  +page.svelte
src/routes/scrapes/[id]/: +page.server.js  +page.svelte
src/routes/spiders/: +page.server.js  +page.svelte
src/routes/spiders/[id]/: +page.server.js  +page.svelte
static/: main.css
